# Kalman

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Makefile  build.ninja
app/: main.cpp
cmake-build/: CMakeCache.txt  Makefile  cmake_install.cmake
cmake-build/app/: Makefile  cmake_install.cmake
cmake-build/lib/: Makefile  cmake_install.cmake
lib/: CMakeLists.txt  adrc.hpp  binary.hpp  common.hpp  dijkstra.hpp  extended_kalman.hpp  filters.hpp  heap_kalman.hpp  heap_matrix.hpp  heap_vector.hpp  kalman.hpp  lqr.hpp  matrix.hpp  pid.hpp  quaternion3d.hpp  regulator.hpp  rotation3d.hpp  stack_kalman.hpp  stack_matrix.hpp  stack_vector.hpp  ternary.hpp  vector.hpp  vector3d.hpp  vector6d.hpp
lib/src/: config.h  kalman.cpp  matrix.hpp
make/: common.mk  third_party.mk
project_root/: CMakeLists.txt
project_root/app/: CMakeLists.txt  main.cpp
project_root/lib/: CMakeLists.txt  arithmetic.hpp  dijkstra.hpp  filters.hpp  kalman.cpp  kalman.h  kalman.hpp  matrix.hpp  matrix_wrapper.hpp  point3d.hpp  quaternion.hpp  quaternion3d.hpp  rotation3d.hpp  vector3d.hpp  vector6d.hpp
project_root/lib/STM32/: CMakeLists.txt
project_root/lib/include/: kalman.h
project_root/lib/src/: config.h  kalman.cpp  matrix.hpp
